
              Add yuy2topam.  Thanks Michael Haardt.

              pamtilt: fix bug: unconditional crash.  Broken in Netpbm 10.63
              (June 2013).

              pnmgamma -srgbtobt709, -bt709tosrgb: fix bug; incorrect output
              nearly always.  Always broken (These options were new in
              Netpbm 10.32 (February 2006)).

              On Windows, don't leave temporary files around (previous code
              did so because unlink of an open file fails in Windows; new
              code deletes temporary files via atexit).  Thanks
              Ludolf Holzheid <ludolf.holzheid@gmx.de>.

              Libnetpbm: fix external header file pm.h so it does not include
              internal header file pm_c_util.h.  Introduced in Netpbm
              10.69 (December 2014).

              build: fix incompatible type compilation error in giftopnm.
              Broken in Netpbm 10.38 (March 2007) (but obviously manifests
              only in recent build environments).

              build: fix compile failure in wordint_access_be.h with Bigendian
              target platforms.  Broken in Netpbm 10.63 (June 2013).

              build: fix compile failure in pbmtomacp, ppmtoacad, pgmabel:
              TRUE redefined.  Introduced in Netpbm 10.69 (December 2014).

14.12.25 BJH  Release 10.69.00

              pnmnorm: add -bsingle, -wsingle.

              ppmtoarbtxt: Do some validation of format strings.  Thanks
              Prophet of the Way <afu@wta.att.ne.jp>.

              pamcrater: Add -verbose.

              ppmtoarbtxt: Fail if a #() escape sequence runs off end of
              file or is too long to process; before, the program would
              treat the text from # to EOF or where the buffer filled up
              as literal text, even ignoring any #() within.

              NetBSD: show actual numbers in messages instead of "f" or
              no information, by using NetBSD's vasprintf.
